# LastEcho

./: CMakeLists.txt
assets/: dialogues_unfinished.json  world_config.json
assets/audio/: BGM.mpeg
assets/maps/class7/: class7.json
assets/maps/class8/: class8.json
assets/maps/clinic/: clinic.json
assets/maps/connHall/: connHall.json
assets/maps/datacenter/: datacenter.json
assets/maps/hallAfter/: hallAfter.json
assets/maps/leftPassage/: leftPassage.json
assets/maps/lobby/: lobby.json
assets/maps/outside/: _Ground.csv  _Others.csv  _Staircase.csv  outside.json  outside.tmx
assets/maps/rightPassage/: rightPassage.json
assets/maps/sclab/: sclab.json
assets/maps/secur/: secur.json
assets/maps/vertPassage/: vertPassage.json
assets/maps/wcm1/: wcm1.json
assets/maps/wcm2/: wcm2.json
assets/maps/wcw/: wcw.json
src/: BTDminigame.cpp  BTDminigame.h  CameraAndPortal.cpp  CameraAndPortal.h  Cutscene.cpp  Cutscene.h  Data.h  DialogueManager.cpp  DialogueManager.h  GameMap.cpp  GameMap.h  Guitarminigame.cpp  Guitarminigame.h  HiddenWordsminigame.cpp  HiddenWordsminigame.h  MainMenu.cpp  MainMenu.h  NPC.cpp  NPC.h  XPBar.cpp  XPBar.h  audio.cpp  audio.h  boss.cpp  boss.h  chest.cpp  chest.h  enemies.cpp  enemies.h  game.cpp  game.h  healthbar.cpp  healthbar.h  inventory.cpp  inventory.h  main.cpp  phase.cpp  phase.h  player.cpp  player.h  (+6 more)
